# QP_main

./: CMakeLists.txt  QP_wrapper.cpp  QP_wrapper.py  algorithm.cpp  algorithm.h  main.cpp  note.md  pardiso.lic  test.py  utils.h
python_test/: run_maros_meszaros_problems.py  test.ipynb
